--- a/Ch01_맛보기_학생용.ipynb
+++ b/Ch01_맛보기_학생용.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -74,6 +74,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hafs\n",
+      "2022\n",
+      "hafs 2022\n",
+      "6\n",
+      "입학을 축하합니다\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hafs')\n",
+    "print(2022)\n",
+    "print('hafs', 2022)\n",
+    "print(1+2+3)\n",
+    "print('입학을 축하합니다')\n",
+    "#' \"\" 사이에 문자열을 넣어서 출력한다.\n",
+    "# \",\"를 이용해서 여러개를 출력한다\n",
+    "# print 함수 속에 식을 넣으면 결과를 계산해서 출력한다. ㅇ"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "IGVQ0OOZQqd7"
@@ -89,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -133,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "executionInfo": {
      "elapsed": 7,
@@ -186,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -246,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "6ZLoD8tJRIcr"
    },
@@ -269,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "fpzAXciqVwXJ"
    },
@@ -293,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "irJ5xY-8SxML"
    },
@@ -319,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "2HL2qI09T_DM"
    },
@@ -341,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "id": "nD09yiyVVWiK"
    },
@@ -364,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "BqKb6kMcVwXN"
    },
@@ -384,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "or-NxHH6WEKo"
    },
@@ -407,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "I3EIVLzmWsOC"
    },
@@ -431,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "-8xLpZl1VwXP"
    },
@@ -453,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "id": "5UXHCgA0XcvD"
    },
@@ -485,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "MkgATSaLVwXS"
    },
@@ -517,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
