--- a/Ch01_맛보기_학생용.ipynb
+++ b/Ch01_맛보기_학생용.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -75,21 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hafs\n",
-      "2022\n",
-      "hafs 2022\n",
-      "6\n",
-      "입학을 축하합니다\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('hafs')\n",
     "print(2022)\n",
@@ -98,7 +86,43 @@
     "print('입학을 축하합니다')\n",
     "#' \"\" 사이에 문자열을 넣어서 출력한다.\n",
     "# \",\"를 이용해서 여러개를 출력한다\n",
-    "# print 함수 속에 식을 넣으면 결과를 계산해서 출력한다. ㅇ"
+    "# print 함수 속에 식을 넣으면 결과를 계산해서 출력한다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello world')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1\n",
+    "b=2\n",
+    "print(b-a)"
    ]
   },
   {
@@ -117,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -161,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {
     "executionInfo": {
      "elapsed": 7,
@@ -214,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -274,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "metadata": {
     "id": "6ZLoD8tJRIcr"
    },
@@ -297,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "metadata": {
     "id": "fpzAXciqVwXJ"
    },
@@ -321,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "metadata": {
     "id": "irJ5xY-8SxML"
    },
@@ -347,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {
     "id": "2HL2qI09T_DM"
    },
@@ -369,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {
     "id": "nD09yiyVVWiK"
    },
@@ -392,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {
     "id": "BqKb6kMcVwXN"
    },
@@ -412,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {
     "id": "or-NxHH6WEKo"
    },
@@ -435,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 69,
    "metadata": {
     "id": "I3EIVLzmWsOC"
    },
@@ -459,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 70,
    "metadata": {
     "id": "-8xLpZl1VwXP"
    },
@@ -481,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 71,
    "metadata": {
     "id": "5UXHCgA0XcvD"
    },
@@ -513,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 72,
    "metadata": {
     "id": "MkgATSaLVwXS"
    },
