--- a/Ch01_맛보기_학생용.ipynb
+++ b/Ch01_맛보기_학생용.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -91,34 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('hello world')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a=1\n",
     "b=2\n",
@@ -133,15 +117,20 @@
    "source": [
     "# ❑ 변수와 변수 출력\n",
     "\n",
-    "* 변수(varialbe)는 값(value)을 저장하는 공간이다.  \n",
+    "* 변수(varialbe)는 값(value)을 저장하는 공간이다. (프로그래밍 언어마다 처리할 수 있는 val의 종류와 언어가 다르다. => 이것을 배운다.) (모든 프로그래밍 언어는 문자열과 숫자 출력 가능) (파이썬에서는 하나의 변수에 숫자와 문자열 저장 가능!)\n",
     "* =는 equal의 의미가 아니라 assignment의 의미  \n",
     "* 변수=값 : 어떤 값을 변수에 할당하시오 의 의미  \n",
     "* = 오른쪽에 수식(연산식)이 있으면 연산의 결과를 변수에 할당한다"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -163,14 +152,15 @@
    "outputs": [],
    "source": [
     "# var_a와 var_b에는 각각 어떤 값이 저장될까?\n",
-    "\n",
-    "\n",
-    "\n",
+    "var_a, var_b = 1,2 \n",
+    "print(var_a, var_b)\n",
+    "print() # 한줄 띄우는 역할\n",
     "\n",
     "# 변수의 값은 불변이 아니다. 할당을 다시 하면 바뀐다. \n",
-    "\n",
-    "\n",
-    "\n"
+    "year=2022\n",
+    "print(year)\n",
+    "year=2023\n",
+    "print(year)"
    ]
   },
   {
@@ -185,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 7,
@@ -202,7 +192,12 @@
    },
    "outputs": [],
    "source": [
-    "# your code\n"
+    "# your code\n",
+    "my_name='지윤서'\n",
+    "my_age=20\n",
+    "my_RIGHT_VA=1.5\n",
+    "my_LEFT_VA=1.5\n",
+    "print(my_name, my_age, my_RIGHT_VA, my_LEFT_VA)"
    ]
   },
   {
@@ -214,12 +209,12 @@
     "# ❑ variable naming rule\n",
     "\n",
     "* 영문, 숫자, _ 로 만든다 # 한글도 가능하지만 하지마라  \n",
-    "* 시작은 반드시 영문자로\n",
+    "* 시작은 반드시 영문자로 or _만\n",
     "* 변수명 중간에 공백은 안됨\n",
     "* 예약어, 내장함수 이름등은 변수명으로 사용 불가 예) True, for, print 등\n",
     "* 대소문자 구분 # Age와 age는 다른 변수  \n",
     "---\n",
-    "* ### 사용 가능한 변수명  \n",
+    "* ### 사용 가능한 변수명  (sum 사용 주의하기! sum()이 있어서)\n",
     "> sum, maxAge, next_value. \n",
     "\n",
     "* ### 사용 불가능한 변수명  \n",
@@ -228,9 +223,18 @@
     "* ### 좋은 변수명의 예\n",
     "> myage, school_name, address, score, eng_score\n",
     "\n",
-    "* ### 나쁜 변수명의 예\n",
+    "* ### 나쁜 변수명의 예 (-> 변수명만 보고도 변수에 담긴 의미를 짐작할 수 있어야 한다. 즉 직관적이여야함)\n",
     "> abc, aaa, a1, a2, <font color=red>hafs, choi</font>  \n",
     "hafs, choi같은 것이 왜 나쁜 변수명일까?\n",
+    "\n",
+    "* ### 사용 가능한 변수명  \n",
+    "> maxAge, next_value. \n",
+    "\n",
+    "* ### 사용 불가능한 변수명  \n",
+    "> 2016year, user name, $wish\n",
+    "\n",
+    "* ### 사용 가능하지만 쓰면 안되는 변수명의 예  \n",
+    "> sum, print, 변수_a\n",
     "\n",
     "* 참고. 내장함수 목록  \n",
     "> https://docs.python.org/ko/3/library/functions.html"
@@ -238,14 +242,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "# 파이썬 예약어 출력하기, 외우지 마세요\n",
+    "total=sum([1,2,3]) \n",
+    "print(total)\n",
+    "\n",
+    "sum=1+2+3 #sum 을 변수로 사용할 시 기존의 내장함수는 사용 불가! (기존의 내장함수를 사용하려면 runtime 초기화 해야함)\n",
+    "print(sum)\n",
+    "# total=sum([1,2,3]) #: 이 때 sum 내장함수는 사용불가\n",
+    "\n",
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* ### 사용 가능한 변수명  \n",
+    "> maxAge, next_value. \n",
+    "\n",
+    "* ### 사용 불가능한 변수명  \n",
+    "> 2016year, user name, $wish\n",
+    "\n",
+    "* ### 사용 가능하지만 쓰면 안되는 변수명의 예  \n",
+    "> sum, print, 변수_a\n"
    ]
   },
   {
@@ -261,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -298,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {
     "id": "6ZLoD8tJRIcr"
    },
@@ -321,13 +355,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {
     "id": "fpzAXciqVwXJ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "컴퓨터공학 자바의 정석\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code\n"
+    "# your code\n",
+    "my_major='컴퓨터공학'\n",
+    "book_name='자바의 정석'\n",
+    "print(my_major, book_name)"
    ]
   },
   {
@@ -345,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {
     "id": "irJ5xY-8SxML"
    },
@@ -371,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {
     "id": "2HL2qI09T_DM"
    },
@@ -393,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {
     "id": "nD09yiyVVWiK"
    },
@@ -416,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {
     "id": "BqKb6kMcVwXN"
    },
@@ -436,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {
     "id": "or-NxHH6WEKo"
    },
@@ -459,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {
     "id": "I3EIVLzmWsOC"
    },
@@ -483,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {
     "id": "-8xLpZl1VwXP"
    },
@@ -505,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {
     "id": "5UXHCgA0XcvD"
    },
@@ -537,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {
     "id": "MkgATSaLVwXS"
    },
