수업시간 커피한 것

--- a/Ch01_맛보기_학생용.ipynb
+++ b/Ch01_맛보기_학생용.ipynb
@@ -556,7 +556,21 @@
    },
    "outputs": [],
    "source": [
-    "# your code\n",
+    "add=3+25\n",
+    "sub=45-13\n",
+    "mul=9*9\n",
+    "div=3/2\n",
+    "div_int=3//2  # 몫을 구하는 연산자 \n",
+    "exp=10**3     # 거듭제곱\n",
+    "mod=5%3       # 나머지를 구하는 연산자\n",
+    "\n",
+    "print(f'add={add}')  #f-string 방식, 값과 변수를 출력하는 가장 좋은 방식\n",
+    "print(f'sub={sub}')\n",
+    "print('mul=',mul)\n",
+    "print('div=',div)\n",
+    "print(div_int)\n",
+    "print(exp)\n",
+    "print(mod)# your code\n",
     "\n",
     "\n"
    ]
