--- a/Ch01_맛보기_학생용.ipynb
+++ b/Ch01_맛보기_학생용.ipynb
@@ -539,13 +539,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "qrvX-jPbXXNO"
-   },
+   "metadata": {},
    "source": [
-    "* # 복합 대입 연산자\n",
-    "\n",
-    "두 개의 연산자를 결합해 놓은 것"
+    "* # 연산자"
    ]
   },
   {
@@ -573,6 +569,58 @@
     "print(mod)# your code\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "f string: 값과 변수(문자열)를 출력하는 쉬운 방식\n",
+    "print(f'add={add}') { } 로 묶으면 변수안에 저장된 값, { } 로 묶지 않으면 변수명 그대로 출력\n",
+    "값과 변수를 동시에 출력할 때 매우매우 편하다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "univ_name='서울대학교'\n",
+    "univ_major='컴퓨터공학'\n",
+    "print(f'나는 {univ_name}에서 {univ_major}과에 진학할겁니다.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "qrvX-jPbXXNO"
+   },
+   "source": [
+    "* # 복합 대입 연산자\n",
+    "\n",
+    "두 개의 연산자를 결합해 놓은 것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "짝수\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=10\n",
+    "if num%2==0:\n",
+    "    print('짝수')\n",
+    "else: \n",
+    "    print('홀수')"
    ]
   },
   {
