--- a/Ch01_맛보기_학생용.ipynb
+++ b/Ch01_맛보기_학생용.ipynb
@@ -20,7 +20,7 @@
     "~~~\n",
     "\n",
     "\n",
-    "* 블록단위 문서(주석)처리 : 작은 따옴표 3개 연속 사용. 프로그램의 문서화 또는 시작 시 설명을 위해 주로 사용.  \n",
+    "* 블록단위 문서(주석)처리 : 작은 따옴표 3개 연속 사용. 프로그램의 문서화 또는 시작 시 설명을 위해 주로 사용. (DOC 스트링이라고 함. 주석은 아니지만 주석처럼 사용 가능!)\n",
     "~~~python\n",
     "''' \n",
     "주석처리 적용 문장 1\n",
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "id": "fpzAXciqVwXJ"
    },
@@ -653,6 +653,92 @@
     "# your code\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* # 스트링 (문자열)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "Hello World!\n",
+      "Hello World!\n",
+      "Hello World!\n",
+      "korea seoul\n"
+     ]
+    }
+   ],
+   "source": [
+    "# '', \"\", ''' ''', \"\"\" \"\"\" 는 모두 string을 만든다.\n",
+    "\n",
+    "'''\n",
+    "'와', \"와\", \"\"\"와 \"\"\" \n",
+    "는 항상 쌍(pair)를 이루어야 한다.\n",
+    "'''\n",
+    "\n",
+    "#'와', \"와\", '''와''', \"\"\"와 \"\"\" \n",
+    "#는 항상 쌍(pair)를 이루어야 한다.\n",
+    "\n",
+    "# ' ' , \" \" 은 한줄만 처리 가능하다. \"\"\" \"\"\", ''' ''' 은 여러줄 처리 가능하다. \n",
+    "\n",
+    "print('Hello World!')\n",
+    "print(\"Hello World!\")\n",
+    "print('''Hello World!''')\n",
+    "print(\"\"\"Hello World!\"\"\")\n",
+    "\n",
+    "# 다음 코드는 오류 발생\n",
+    "# doc='\n",
+    "# hafs\n",
+    "# '\n",
+    "\n",
+    "# 다음 코드는 정상 실행, ' 대신 \" 사용 가능\n",
+    "doc='''\n",
+    "hafs\n",
+    "'''\n",
+    "\n",
+    "country='korea'\n",
+    "city=\"seoul\"\n",
+    "\n",
+    "print(country, city)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "school_name='hafs'hafs'hafs' #값과 변수사이가 관계가 없다. 쌍으로 붙어야 되고 가장 가까운 ' ' 와 매칭된다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'hafs\" 'hafs\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=''''hafs\"'''\n",
+    "b=\"'hafs\"\n",
+    "print(a,b)"
    ]
   }
  ],
