--- a/Ch01_맛보기_학생용.ipynb
+++ b/Ch01_맛보기_학생용.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 7,
@@ -190,7 +190,15 @@
     },
     "id": "CaqgGMrpVwXE"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "지윤서 20 1.5 1.5\n"
+     ]
+    }
+   ],
    "source": [
     "# your code\n",
     "my_name='지윤서'\n",
@@ -213,6 +221,7 @@
     "* 변수명 중간에 공백은 안됨\n",
     "* 예약어, 내장함수 이름등은 변수명으로 사용 불가 예) True, for, print 등\n",
     "* 대소문자 구분 # Age와 age는 다른 변수  \n",
+    "* 내장함수 필요한 것 (중요한 것) 외우기!\n",
     "---\n",
     "* ### 사용 가능한 변수명  (sum 사용 주의하기! sum()이 있어서)\n",
     "> sum, maxAge, next_value. \n",
@@ -242,18 +251,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n",
-      "6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 파이썬 예약어 출력하기, 외우지 마세요\n",
     "total=sum([1,2,3]) \n",
@@ -355,19 +355,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "id": "fpzAXciqVwXJ"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "컴퓨터공학 자바의 정석\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# your code\n",
     "my_major='컴퓨터공학'\n",
@@ -422,8 +414,21 @@
    },
    "outputs": [],
    "source": [
-    "# your code\n",
     "\n",
+    "# 내장함수, 만들어져 있는 것을 사용하자!\n",
+    "print('print함수는 어떤 값을 모니터에 출력하는 operation을 수행')\n",
+    "\n",
+    "length=len('hafs')\n",
+    "print(length)\n",
+    "\n",
+    "max_number=max(11,2,63,47,50)\n",
+    "print(max_number)\n",
+    "\n",
+    "min_number=min(11,2,63,47,50)\n",
+    "print(min_number)\n",
+    "\n",
+    "result=sum([1,2,3,4,5,6,7,8,9,10])\n",
+    "print(result) \n",
     "\n"
    ]
   },
@@ -438,15 +443,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "nD09yiyVVWiK"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function len in module builtins:\n",
+      "\n",
+      "len(obj, /)\n",
+      "    Return the number of items in a container.\n",
+      "\n",
+      "Help on built-in function sum in module builtins:\n",
+      "\n",
+      "sum(iterable, /, start=0)\n",
+      "    Return the sum of a 'start' value (default: 0) plus an iterable of numbers\n",
+      "    \n",
+      "    When the iterable is empty, return the start value.\n",
+      "    This function is intended specifically for use with numeric values and may\n",
+      "    reject non-numeric types.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# your code\n",
+    "help(len)\n",
     "\n",
-    "\n"
+    "help(sum) # help는 개발자가 중요하게 여기는 키 포인트. 한번쯤은 정독하자\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function abs in module builtins:\n",
+      "\n",
+      "abs(x, /)\n",
+      "    Return the absolute value of the argument.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(abs)"
    ]
   },
   {
@@ -472,6 +520,11 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "uhjmg20GWAs9"
    },
@@ -481,16 +534,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "or-NxHH6WEKo"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
    "source": [
     "# input()에서 ()안의 텍스트 역할은 무엇일까요?\n",
+    "name=input()  \n",
+    "age=int(input('나이를 입력하세요 : '))\n",
+    "\n",
+    "# 다음 코드의 결과는 무엇일까? 짐작부터해보자.\n",
+    "print(age+10)\n",
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name='jongwoo' # 1번은 먼저 assign 된것\n",
+    "my_name=input('이름 : ') # 2번은 입력한 후에 변수가 assign 된 것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method raw_input in module ipykernel.kernelbase:\n",
+      "\n",
+      "raw_input(prompt='') method of ipykernel.ipkernel.IPythonKernel instance\n",
+      "    Forward raw_input to frontends\n",
+      "    \n",
+      "    Raises\n",
+      "    ------\n",
+      "    StdinNotImplementedError if active frontend doesn't support stdin.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(input)"
    ]
   },
   {
@@ -604,17 +705,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "짝수\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num=10\n",
     "if num%2==0:\n",
@@ -664,21 +757,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World!\n",
-      "Hello World!\n",
-      "Hello World!\n",
-      "Hello World!\n",
-      "korea seoul\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# '', \"\", ''' ''', \"\"\" \"\"\" 는 모두 string을 만든다.\n",
     "\n",
@@ -724,17 +805,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'hafs\" 'hafs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a=''''hafs\"'''\n",
     "b=\"'hafs\"\n",
