--- a/Ch02_친해지기#1(int,float,complex,bool)_학생용.ipynb
+++ b/Ch02_친해지기#1(int,float,complex,bool)_학생용.ipynb
@@ -16,6 +16,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "60\n",
+      "45\n",
+      "45\n",
+      "['red', 'blue', 'green']\n"
+     ]
+    }
+   ],
+   "source": [
+    "number=1\n",
+    "print(number)\n",
+    "\n",
+    "num1=10; num2=20; num3=30\n",
+    "print(num1+num2+num3)\n",
+    "\n",
+    "result=1+2+3+\\\n",
+    "        4+5+6+\\\n",
+    "        7+8+9\n",
+    "print(result)\n",
+    "\n",
+    "result=(1+2+3+  # ( 를 사용하면 \\를 쓰지 않아도 여러줄이라는 의미\n",
+    "    4+5+6+\n",
+    "    7+8+9)\n",
+    "print(result)\n",
+    "\n",
+    "color=['red', 'blue', 'green'] # 리스트 / color 라는 변수 안에 값을 저장하는 것 age=20 이런 것과 같은 원리임.\n",
+    "print(color)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "IGVQ0OOZQqd7"
@@ -188,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
