--- a/Ch01_맛보기_학생용.ipynb
+++ b/Ch01_맛보기_학생용.ipynb
@@ -534,19 +534,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "id": "or-NxHH6WEKo"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# input()에서 ()안의 텍스트 역할은 무엇일까요?\n",
     "name=input()  \n",
@@ -557,6 +549,32 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21 189.23\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "'''\n",
+    "위의 코드에서 age는 숫자가 아니어서 + 연산 불가. 오류발생.\n",
+    "input()의 결과는 항상 문자열\n",
+    "숫자를 입력 받고 싶으면????\n",
+    "'''\n",
+    "\n",
+    "age=int(input('나이를 입력하세요 : '))\n",
+    "height=float(input('키를 입력하세요 : '))\n",
+    "print(age, height)\n"
    ]
   },
   {
@@ -612,8 +630,54 @@
    "outputs": [],
    "source": [
     "# your code\n",
-    "\n",
-    "\n"
+    "print(type('hafs'))\n",
+    "print(type(35))\n",
+    "print(type(1.0))\n",
+    "print(type([1,2,3]))\n",
+    "print(type(<1,2,3>))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code\n",
+    "print(int(3))\n",
+    "print(int(3.5))  \n",
+    "# print(int('3.5'))  \n",
+    "print(int('3'))   \n",
+    "print()\n",
+    "print(float(3))\n",
+    "print(float(3.5))\n",
+    "print(float('3'))\n",
+    "print(float('3.5'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### int 함수, 소숫점이하는 버림 처리\n",
+    "### str 을 int 함수로 변환하면 정수로 변환됨 (단, str 안의 숫자가 정수가 아니면 변환 불가!)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# type은 변수의 값이 어떤 종류가 어떤 것인지 알려준다.\n",
+    "# float: 실수형, list: 리스트, int: 정수형, str: 문자열 "
    ]
   },
   {
@@ -629,13 +693,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "-8xLpZl1VwXP"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "4\n",
+      "0.8\n",
+      "0.5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code\n"
+    "# your code\n",
+    "ID=input('ID')\n",
+    "PW=input('Password : ')\n",
+    "print(len(ID))\n",
+    "print(len(PW))\n",
+    "Left_Eye=float(input('Left Eye : '))\n",
+    "Right_Eye=float(input('Right Eye : '))\n",
+    "print(2.0-Left_Eye); print(2.0-Right_Eye)"
    ]
   },
   {
@@ -705,6 +787,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "7\n",
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=5\n",
+    "x=x+1\n",
+    "print(x)\n",
+    "\n",
+    "y=1\n",
+    "y+=x #y=y+x\n",
+    "print(y)\n",
+    "\n",
+    "z=2\n",
+    "z*=y # z=z*y\n",
+    "print(z)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -737,13 +848,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "MkgATSaLVwXS"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "32\n",
+      "282\n"
+     ]
+    }
+   ],
    "source": [
     "# your code\n",
+    "x=5\n",
+    "x=x+1*10\n",
+    "print(x)\n",
+    "\n",
+    "y=42-1+1-10\n",
+    "print(y)\n",
+    "\n",
+    "z=(x+y)*6\n",
+    "print(z)\n",
     "\n",
     "\n"
    ]
