--- a/Ch02_친해지기#1(int,float,complex,bool)_학생용.ipynb
+++ b/Ch02_친해지기#1(int,float,complex,bool)_학생용.ipynb
@@ -12,7 +12,7 @@
     "파이썬의 기본 자료형에는  \n",
     ">int, float, complex, str, list, tuple, dicionary, set, bool\n",
     "\n",
-    "등 9개가 있다."
+    "등 9개가 있다. ( 외울필요 없다.)"
    ]
   },
   {
@@ -20,7 +20,53 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mass=100\n",
+    "height=1.7\n",
+    "g=9.8065\n",
+    "\n",
+    "print(f'질량 : {mass}')\n",
+    "print(f'높이 : {height}')\n",
+    "print(f'중력상수 : {g}')\n",
+    "print()  # 빈줄 출력\n",
+    "\n",
+    "#여러 변수값 출력하기\n",
+    "print(mass, height, mass*height*g)\n",
+    "\n",
+    "#구분자 넣고 출력하기\n",
+    "print(mass, height, mass*height*g, sep=\",\") # sep: 프린트 함수의 옵션, 구분자를 지정해줌\n",
+    "print(mass, height, mass*height*g, sep=\"/\")\n",
+    "\n",
+    "# help(print)로 도움말을 다시 읽어보고 위의 코드를 확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function print in module builtins:\n",
+      "\n",
+      "print(...)\n",
+      "    print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)\n",
+      "    \n",
+      "    Prints the values to a stream, or to sys.stdout by default.\n",
+      "    Optional keyword arguments:\n",
+      "    file:  a file-like object (stream); defaults to the current sys.stdout.\n",
+      "    sep:   string inserted between values, default a space.\n",
+      "    end:   string appended after the last value, default a newline.\n",
+      "    flush: whether to forcibly flush the stream.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(print)"
+   ]
   },
   {
    "cell_type": "code",
@@ -94,8 +140,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code\n"
+    "# your code\n",
+    "score_math=float(input('수학점수를 입력하세요 : '))\n",
+    "score_korean=float(input('국어점수를 입력하세요 : '))\n",
+    "score_english=float(input('영어점수를 입력하세요 : '))\n",
+    "avg=(score_math+score_korean+score_english)/3\n",
+    "total=(score_math+score_korean+score_english)\n",
+    "print(f'총점 : {total}, 평균 : {avg}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -111,13 +170,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "0IVHcVq8M1zx"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35 <class 'int'>\n",
+      "21267647932558653966460912964485513216 <class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "# 정수 타입(type)이름알기\n",
+    "age=35\n",
+    "print(age, type(age))\n",
+    "\n",
+    "big_int=2**124\n",
+    "print(big_int, type(big_int))\n",
     "\n"
    ]
   },
@@ -154,6 +227,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pi=3.14\n",
+    "print('변수 pi의 자료형은 ', type(pi))\n",
+    "\n",
+    "pi=3\n",
+    "print('변수 pi의 자료형은 ', type(pi))\n",
+    "\n",
+    "number=0.0\n",
+    "print(f'변수 number의 자료형은 {type(number)}')  # f-string방식으로 출력\n",
+    "\n",
+    "number=0\n",
+    "print(f'변수 number의 자료형은 {type(number)}') # f-string방식으로 출력\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -166,7 +265,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code\n"
+    "# your code\n",
+    "pi=3.14\n",
+    "rad=float(input('반지름을 입력하세요 : '))\n",
+    "area=pi*rad**2\n",
+    "print(area)\n"
    ]
   },
   {
@@ -204,11 +307,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True <class 'bool'>\n",
+      "False <class 'bool'>\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "False True\n",
+      "True True\n",
+      "True False\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code\n"
+    "# your code\n",
+    "reply=True\n",
+    "print(reply, type(reply))\n",
+    "\n",
+    "reply=False\n",
+    "print(reply, type(reply))\n",
+    "\n",
+    "print(1>2)\n",
+    "print(1<2)\n",
+    "print('hafs'=='hafs')\n",
+    "print('hafs'=='HAFS')\n",
+    "\n",
+    "print(3==True, bool(3))\n",
+    "print(1==True, bool(1))\n",
+    "print(0==False, bool(0))\n",
+    "print(True+True)"
    ]
   }
  ],
