--- a/Ch02_친해지기#1(int,float,complex,bool)_학생용.ipynb
+++ b/Ch02_친해지기#1(int,float,complex,bool)_학생용.ipynb
@@ -42,35 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on built-in function print in module builtins:\n",
-      "\n",
-      "print(...)\n",
-      "    print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)\n",
-      "    \n",
-      "    Prints the values to a stream, or to sys.stdout by default.\n",
-      "    Optional keyword arguments:\n",
-      "    file:  a file-like object (stream); defaults to the current sys.stdout.\n",
-      "    sep:   string inserted between values, default a space.\n",
-      "    end:   string appended after the last value, default a newline.\n",
-      "    flush: whether to forcibly flush the stream.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(print)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +105,64 @@
    "outputs": [],
    "source": [
     "# print문의 다양한 사용\n",
+    "# 작은 따옴표, 큰 따옴표의 쓰임새\n",
+    "# string='작은 따옴표 안에 '작은 따옴표'를 쓰면 오류 발생\n",
+    "# string=\"큰 따옴표 안에 \"큰따옴표\"를 쓰면 오류 발생\"\n",
+    "\n",
+    "txt1='문자열은 작은 따옴표 또는 큰 따옴표로 묶어서 만들 수 있다'\n",
+    "print(type(txt1))\n",
+    "\n",
+    "txt2='작은 따옴표로 묶인 문자열 안에 \"큰 따옴표\"는 문제 없네요.'\n",
+    "print(txt2)\n",
+    "\n",
+    "\n",
+    "txt3=\"큰 따옴표로 묶인 문자열 안에 '작은 따옴표'는 문제 없네요.\"\n",
+    "print(txt3)\n",
+    "\n",
+    "txt4='특수 문자열은 \\'이렇게\\' 출력되요' \n",
+    "print(txt4)\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text='나는 문자열이다. \\n줄바꿈이나 \\t탭만큼 띄우려면escape string을 써야 하고 \\n 그래서 조금 번거롭다 '\n",
+    "print(text)\n",
+    "print()\n",
+    "\n",
+    "multitext='''\n",
+    "하지만 이렇게 \\'\\'\\'나 \"\"\"을 사용하면\n",
+    "보이는 그대로 \n",
+    "출력한다.\n",
+    "물론 특수문자(~!#$%^&*()도 그대로 나온다.\n",
+    "'''\n",
+    "print(multitext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "Hello\n",
+      "WorldWorldWorldWorldWorldWorldWorldWorldWorldWorldWorldWorldWorldWorldWorldWorld\n"
+     ]
+    }
+   ],
+   "source": [
+    "str_1='Hello\\n'\n",
+    "str_2='World'\n",
+    "print(str_1*2+str_2*16)"
    ]
   },
   {
@@ -344,6 +382,65 @@
     "print(1==True, bool(1))\n",
     "print(0==False, bool(0))\n",
     "print(True+True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pythonpythonpythonpython\n"
+     ]
+    }
+   ],
+   "source": [
+    "string='python'\n",
+    "string+=string\n",
+    "print(string+str(string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pythonhafs\n",
+      "==================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt1='python'\n",
+    "txt2='hafs'\n",
+    "print(txt1+txt2)\n",
+    "\n",
+    "print('='*50)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hafs hafs hafs hafs hafs hafs hafs hafs hafs \n"
+     ]
+    }
+   ],
+   "source": [
+    "str='hafs '\n",
+    "print(str*9)"
    ]
   }
  ],
