--- a/Ch02_친해지기#2(string)_학생용.ipynb
+++ b/Ch02_친해지기#2(string)_학생용.ipynb
@@ -57,11 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "나는 'hafs'를 사랑해\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code\n"
+    "# your code\n",
+    "print(\"나는 'hafs'를 사랑해\")"
    ]
   },
   {
@@ -144,15 +153,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "0IVHcVq8M1zx"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'h'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# indexing 실습\n",
-    "\n",
-    "\n"
+    "'hafs'[0]\n"
    ]
   },
   {
@@ -168,7 +187,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code\n"
+    "# your code\n",
+    "string='0123456789'\n",
+    "\n",
+    "print(string[0]) #index의 시작은 0부터!!!\n",
+    "print(string[1])\n",
+    "print(string[5])\n",
+    "print()\n",
+    "print(string[-1]) #  가변적인 문자열에서 절댓값이 필요하다. 문자열은 가변적이다. \n",
+    "print(string[-2])\n",
+    "print(string[-6])\n"
    ]
   },
   {
@@ -183,21 +211,91 @@
     "슬라이싱 결과에 제일 끝은 포함되지 않는다.  \n",
     "\n",
     "기본 폼은 문자열[start:stop:step]  \n",
-    "step이 양수이면 슬라이싱 방향은 left to right, 음수이면 right to left"
+    "step이 양수이면 슬라이싱 방향은 left to right, 음수이면 right to left\n",
+    "\n",
+    "start 를 생략하면 처음(0)부터, end를 생략하면 문자열 제일 끝(-1)이 된다.\n",
+    "\n",
+    "step이 음수이면,\n",
+    "start 생략(-1) 부터, end 생략하면 문자열 제일 끝(0) 이 된다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "id": "0IVHcVq8M1zx"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ha'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 슬라이싱 실습\n",
+    "'hafs'[0:2:1] # 슬라이싱은 시작과 끝을 지정하고, 증감수를 지정한다.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[실습1] string='0123456789' 일때 슬라이싱과 \n",
+    "문자열 연산을 이용해 963789 를 출력해 보세요.\n",
+    "\n",
+    "[실습2] list(range(1,10+1))은 [1,2,3,4,5,6,7,8,9,10]이다. \n",
+    "짝수를 모두 출력하시오.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "963789\n",
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#실습 1 \n",
+    "string='0123456789'\n",
+    "print(string[:2:-3]+string[-3::]) # 슬라이싱은 시작과 끝을 지정하고, 증감수를 지정한다.\n",
+    "#실습 2\n",
+    "string_1=list(range(1,11))\n",
+    "print(string_1[1::2])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "0IVHcVq8M1zx"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# 슬라이싱 실습\n",
+    "string='0123456789'\n",
     "\n",
-    "\n",
-    "\n"
+    "print(string[0:5]) \n",
+    "print(string[2:4])\n",
+    "print(string[3:]) # 뒤를 생략하면 끝까지의 의미\n",
+    "print(string[:3]) # 앞을 생략하면 처음부터의 의미\n",
+    "print(string[::3])\n",
+    "print(string[::-2])\n",
+    "print(string[3::3])\n",
+    "print(string[:-3:-2])  # step이 음수 일때 start에 생략된 것은?\n",
+    "print(string[:-3:2])  # step이 양수 일때 start에 생략된 것은?\n"
    ]
   },
   {
@@ -231,13 +329,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "0IVHcVq8M1zx"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/workspaces/hafs_portfolio/Ch02_친해지기#2(string)_학생용.ipynb Cell 24'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Ballojys-hafs-portfolio-5w9w9w6p375rw/workspaces/hafs_portfolio/Ch02_%EC%B9%9C%ED%95%B4%EC%A7%80%EA%B8%B0%232%28string%29_%ED%95%99%EC%83%9D%EC%9A%A9.ipynb#ch0000020vscode-remote?line=0'>1</a>\u001b[0m \u001b[39m# immutable 실습\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Ballojys-hafs-portfolio-5w9w9w6p375rw/workspaces/hafs_portfolio/Ch02_%EC%B9%9C%ED%95%B4%EC%A7%80%EA%B8%B0%232%28string%29_%ED%95%99%EC%83%9D%EC%9A%A9.ipynb#ch0000020vscode-remote?line=1'>2</a>\u001b[0m name\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mchoijongwoa\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell://codespaces%2Ballojys-hafs-portfolio-5w9w9w6p375rw/workspaces/hafs_portfolio/Ch02_%EC%B9%9C%ED%95%B4%EC%A7%80%EA%B8%B0%232%28string%29_%ED%95%99%EC%83%9D%EC%9A%A9.ipynb#ch0000020vscode-remote?line=2'>3</a>\u001b[0m name[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mo\u001b[39m\u001b[39m'\u001b[39m  \u001b[39m# 오류 발생\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://codespaces%2Ballojys-hafs-portfolio-5w9w9w6p375rw/workspaces/hafs_portfolio/Ch02_%EC%B9%9C%ED%95%B4%EC%A7%80%EA%B8%B0%232%28string%29_%ED%95%99%EC%83%9D%EC%9A%A9.ipynb#ch0000020vscode-remote?line=4'>5</a>\u001b[0m name\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mchoijongwoo\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
     "# immutable 실습\n",
+    "name='choijongwoa'\n",
+    "name[-1]='o'  # 오류 발생\n",
+    "\n",
+    "name='choijongwoo' # name을 재정의 해야 바꿀 수 있다.\n",
     "\n",
     "\n"
    ]
@@ -305,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
