--- a/Ch02_친해지기#3(list,tuple)_학생용.ipynb
+++ b/Ch02_친해지기#3(list,tuple)_학생용.ipynb
@@ -30,21 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "id": "0IVHcVq8M1zx"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HELLO WORLD, OH MY PYTHON\n",
-      "hello world, oh my python\n",
-      "Hello World, Oh My Python\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# list 실습\n",
     "myStr = \"Hello World, oh my Python\"\n",
@@ -64,11 +54,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정\n",
+      "0.20000000000000018\n"
+     ]
+    }
+   ],
+   "source": [
+    "# your code\n",
+    "class202=['윤태선','최종우','정의원']\n",
+    "print(class202[-1][0])\n",
+    "score_all=[95,96,97,98,99]\n",
+    "total=sum(score_all)\n",
+    "average=total/len(score_all)\n",
+    "a=3.2\n",
+    "b=a%3\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code\n"
+    "# 다음 3줄의 공통점과 차이점에 대해 알아보자\n",
+    "age=35\n",
+    "mystr='hafs'\n",
+    "data=[1,2,3,'hafs','최종우']\n",
+    "'''\n",
+    "공통점: 변수에 값을 저장한다.\n",
+    "차이점: 변수에 값이 저장된 type이 다르다. + 변수 하나에 list 저장 가능 \n",
+    "\n",
+    "''''\n",
+    "# list의 일반적인 사용\n",
+    "count=[1,2,3,4,5]\n",
+    "cars=['bus', '트럭', '승용차', 'suv']\n",
+    "print(count, cars)\n",
+    "print(cars[0],cars[-1]) # string의 인덱싱과 같은 규칙\n",
+    "print(cars[:3]) # string의 슬라이싱과 같은 규칙\n",
+    "\n",
+    "class201=['홍길동', '구운몽', '흥부']\n",
+    "class202=['윤태선','최종우','정의원']\n",
+    "grade2=[class201, class202] # 변수 안에 리스트로 묶어주기 / 현실과 가깝게 프로그래밍\n",
+    "print(grade2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "hafs\n",
+      "h\n",
+      "[4, 5, 6, [7, 8]]\n",
+      "[7, 8]\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list 안에 스트링이나 list같은 iterable 자료가 있는 경우\n",
+    "\n",
+    "data=[1,2,3,'hafs',[4,5,6,[7,8]]]\n",
+    "\n",
+    "print(len(data))\n",
+    "print(data[3], data[3][0], data[4], data[4][-1], data[4][-1][1], sep='\\n' )"
    ]
   },
   {
