--- a/Ch01_맛보기_학생용.ipynb
+++ b/Ch01_맛보기_학생용.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -75,9 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hafs\n",
+      "2022\n",
+      "hafs 2022\n",
+      "6\n",
+      "입학을 축하합니다\n"
+     ]
+    }
+   ],
    "source": [
     "print('hafs')\n",
     "print(2022)\n",
@@ -100,9 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "a=1\n",
     "b=2\n",
@@ -942,6 +962,24 @@
     "a=''''hafs\"'''\n",
     "b=\"'hafs\"\n",
     "print(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "age=float(input('나이를 입력하세요'))\n",
+    "print(age)"
    ]
   }
  ],
