--- a/Ch02_친해지기#3(list,tuple)_학생용.ipynb
+++ b/Ch02_친해지기#3(list,tuple)_학생용.ipynb
@@ -144,13 +144,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "0IVHcVq8M1zx"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['iMac', 'Watch', 'iPad']\n",
+      "['iMac Pro', 'Watch', 'iPad']\n",
+      "['iMac Pro', 'Watch', 'iPad', 'iphone']\n"
+     ]
+    }
+   ],
    "source": [
     "# 리스트 변경 실습\n",
+    "'''\n",
+    "mutable : 변경 가능한 자료형, 수정 가능\n",
+    "immutable: 변경 불가능한 자료형, 수정 불가능\n",
+    "tuple 은 immutable\n",
+    "tuple 변경 불가능! , 수정하지 않을 것을 tuple 사용/ 변경하려면 list 를 사용하자!\n",
+    "'''\n",
+    "wish_list=['iMac','Watch', 'iPad']\n",
+    "print(wish_list)\n",
+    "\n",
+    "wish_list[0]='iMac Pro'\n",
+    "print(wish_list) # 리스트는 아이템 별로 업데이트 가능!\n",
+    "\n",
+    "new_wish_list=wish_list+['iphone'] # 리스트의 더하기는 두 리스트의 연결, 스트링과 동일한 규칙\n",
+    "print(new_wish_list)\n",
     "\n",
     "\n"
    ]
@@ -191,7 +215,23 @@
    "outputs": [],
    "source": [
     "# 슬라이싱 실습\n",
+    "numbers=[1,3,5,7,9,11,13]\n",
     "\n",
+    "print(numbers[2:5])\n",
+    "print(numbers[:5])\n",
+    "print(numbers[2:])\n",
+    "print(numbers[:])\n",
+    "\n",
+    "print(numbers[2:5:2])\n",
+    "print(numbers[:5:2])\n",
+    "print(numbers[2::2])\n",
+    "print(numbers[::2])\n",
+    "\n",
+    "\n",
+    "print(numbers[2:5:-3])\n",
+    "print(numbers[:5:-3])\n",
+    "print(numbers[2::-3])\n",
+    "print(numbers[::-3])\n",
     "\n"
    ]
   },
@@ -204,11 +244,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7, 8], 6]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code\n"
+    "# your code\n",
+    "#data 에서 [[7,8], 6] 출력하기\n",
+    "data= [1,2,3,'hafs',[4,5,6,[7,8]]]\n",
+    "print(data[4][:-3:-1])"
    ]
   },
   {
